--- a/challenge-2/package.json
+++ b/challenge-2/package.json
@@ -55,6 +55,7 @@
     "vite-tsconfig-paths": "5.1.4"
   },
   "resolutions": {
-    "brace-expansion": "2.0.2"
+    "brace-expansion": "2.0.2",
+    "@eslint/plugin-kit": "0.3.3"
   }
 }
